# halfblind-open-rust-packages

./: Cargo.toml  README.md  build.rs
.github/workflows/: deploy-packages.yml  upload-npm-packages.yml
build-config/: Development.run.xml  Release.run.xml
data/: ItemDefinitions.bytes
halfblind-database-service/: Cargo.toml
halfblind-database-service/src/: database_service.rs  database_service_impl.rs  lib.rs
halfblind-inventory-service/: Cargo.toml
halfblind-inventory-service/src/: inventory_service.rs  inventory_service_impl.rs  lib.rs  models.rs
halfblind-itemdefinitions-service/: Cargo.toml
halfblind-itemdefinitions-service/src/: item_definitions_service.rs  item_definitions_service_impl.rs  lib.rs
halfblind-network/: Cargo.toml
halfblind-network/src/: context.rs  lib.rs  request_handler_trait.rs  utils.rs
halfblind-protobuf/: Cargo.toml
halfblind-protobuf-network/: Cargo.toml
halfblind-protobuf-network/src/: lib.rs  protobuf_network.rs
halfblind-protobuf/src/: utils.rs
halfblind-random/: Cargo.toml
halfblind-random/src/: lib.rs  random_service.rs  random_service_impl.rs
halfblind-transactions/: Cargo.toml
halfblind-transactions/.sqlx/: query-765165bdede063b4091c8b2bb626e29df38983067421e6f6985430a1ee1bc960.json
halfblind-transactions/src/: lib.rs  transaction_models.rs  transaction_service.rs  transaction_utils.rs
proto-gen/: Cargo.toml  build.rs
proto-gen/src/: item_definitions_bytes_generator.rs  lib.rs  position_extensions.rs  protobuf_game.rs
protobuf-itemdefinition/: Cargo.toml
protobuf-itemdefinition/src/: build_utils.rs  lib.rs  protobuf_itemdefinition.rs  transaction_utils.rs
protobuf-workspace/: generate_protobuf.sh  generate_protobuf_itemdefinition_csharp.sh  generate_protobuf_network_csharp.sh
protobuf-workspace/protos/protobuf-game/balancing/: map_components.proto  (+7 more)
src/: main.rs
src/authentication/: login_handler.rs  mod.rs  register_handler.rs
src/behaviour_trees/: behaviour_tree_decoder.rs  behaviour_tree_map_context.rs  behaviour_tree_node.rs  behaviour_tree_status.rs  mod.rs  utils.rs
src/characters/: character_create_handle.rs  character_equip_handler.rs  character_revive_handler.rs  characters_query_handler.rs  characters_service.rs  characters_service_impl.rs  mod.rs  models.rs
src/combat/: combat_utils.rs  mod.rs
src/db/: db.rs  models.rs
src/handlers/: mod.rs  utils.rs
src/inventory/: cheat_add_inventory_item_handler.rs  inventory_item_utils.rs  inventory_service_impl.rs  merchant_buy_handler.rs  merchant_sell_handler.rs  mod.rs  player_inventory_handler.rs
src/item_definitions/: items_definition_handler.rs  mod.rs
src/map/: game_map.rs  map_action_handler.rs  map_join_handler.rs  maps_service.rs  maps_service_impl.rs  mod.rs  models.rs
src/map_update/: game_state_rewindable.rs  maps_update_service.rs  maps_update_service_impl.rs  mod.rs
src/nav_mesh/: mod.rs  navmesh.rs
src/quests/: claim_quest_handler.rs  mod.rs  start_quest_handler.rs
src/systems/: systems.rs
src/transactions/: mod.rs  transaction_handler.rs  transaction_instances_handler.rs  transaction_resolve_handler.rs  transaction_service_impl.rs
unity-packages/halfblind-protobuf-itemdefinition/: package.json
unity-packages/halfblind-protobuf-network/: package.json
(+55 files in other folders)
