[package]
name = "rust-grpc-server"
version = "0.1.0"
edition = "2024"

[dependencies]
halfblind-database-service = { path = "halfblind-database-service" }
halfblind-itemdefinitions-service = { path = "halfblind-itemdefinitions-service" }
halfblind-inventory-service = { path = "halfblind-inventory-service" }
halfblind-network = { path = "halfblind-network" }
halfblind-protobuf = { path = "halfblind-protobuf" }
halfblind-protobuf-network = { path = "halfblind-protobuf-network" }
protobuf-itemdefinition = { path = "protobuf-itemdefinition" }
halfblind-random = { path = "halfblind-random" }
halfblind-transactions = { path="halfblind-transactions" }
proto-gen = { path = "proto-gen" }
prost = "0.14.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
once_cell = "1.21.3"
uuid = { version = "1.17.0", features = ["v4"] }
dashmap = "6.1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"] }
async-trait = "0.1.77"
prost-types = "0.14.1"
chrono = "0.4.41"
axum = { version = "0.8.4", features = ["ws"] }
dotenvy = "0.15"
rand = { version = "0.9.2", features = ["small_rng"] }
crossbeam-queue = "0.3.12"
glam = "0.30.5"
rayon = "1.11.0"
inventory = "0.3.21"

[features]
dev-password = []
cheats = []
profile-network-requests = []

[build-dependencies]
protobuf-itemdefinition = { path = "protobuf-itemdefinition" }
prost = "0.14.1"
prost-types = "0.14.1"
once_cell = "1.21.3"
