[package]
name = "halfblind-network"
version = "0.1.0"
edition = "2024"

[dependencies]
halfblind-protobuf = { path = "../halfblind-protobuf" }
halfblind-protobuf-network = {  path = "../halfblind-protobuf-network" }
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
futures-util = "0.3.31"
async-trait = "0.1.77"
chrono = "0.4.41"
prost = "0.14.1"
inventory = "0.3.21"



