[package]
name = "halfblind-transactions"
version = "0.1.0"
edition = "2024"

[dependencies]
halfblind-database-service = { path = "../halfblind-database-service" }
halfblind-inventory-service = { path = "../halfblind-inventory-service" }
protobuf-itemdefinition = { path = "../protobuf-itemdefinition" }
halfblind-protobuf-network = { path = "../halfblind-protobuf-network" }
halfblind-random = { path = "../halfblind-random" }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "uuid", "chrono"] }
chrono = "0.4.41"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
